--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/home.css">
     <title>Aeroporto Internacional do Guamá</title>
 </head>
 
@@ -12,42 +12,69 @@
         <nav class="navbar">
           <a href="#">AIG-Logo</a>
           <ul class="navbar-list">
-            <li> <a href="#home">Home</a>Home</li>
+            <li> <a href="#home">Home</a></li>
             <li> <a href="#aeroporto">Aeroporto</a></li>
-            <li> <a href="#passageiros">Passageiros</a></li>
+            <li> <a href="#passagens">Reservas</a></li>
             <li> <a href="#login">Login</a></li>
           </ul>
         </nav>
       </header>
 
     <div class="div-voo">
-        <table class="table-voo">
-            <thead class="table-dark">
-                <tr>
-                    <th>ID</th>
-                    <th>COmpanhia</th>
-                    <th>Destino</th>
-                    <th>Horário</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Thymeleaf irá iterar sobre a lista de voos -->
-                <tr th:each="voo : ${voos}">
-                    <td th:text="${passagem.id}"></td>
-                    <td th:text="${passagem.destino}"></td>
-                    <td th:text="${#numbers.formatDecimal(passagem.preco, 1, 2)}"></td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="div-voo-img">
+            <!-- Colocar uma imagem, sei lá-->
+        </div>
+        <div class="div-voo-table">
+            <table class="table-voo">
+                <thead class="table-dark">
+                    <tr>
+                        <th>Companhia</th>
+                        <th>ID</th>
+                        <th>Destino</th>
+                        <th>Horário</th>
+                        <th>Status</th>
+                        <th>Terminal</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Thymeleaf irá iterar sobre a lista de voos -->
+                    <tr th:each="voo : ${voos}">
+                        <td th:text="${voo.companhia}"></td>
+                        <td th:text="${voo.idVoo}"></td>
+                        <td th:text="${voo.chegadaDestino}"></td>
+                        <td th:text="${voo.horario}"></td>
+                        <td th:text="${voo.statusVoo}"></td>
+                        <td th:text="${voo.terminal}"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="div-compra-passagem">
+        <section id="passageiros">
+            <h2>Compre sua passagem</h2>
+            <p>Compre sua passagem aérea com a maior comodidade e segurança</p>
+            <button> </button>
+            <a href="compra"><u>Compre sua passagem</u></a>
+        </section>
     </div>
 
     <div class="div-servicos"> 
-        <section id="servicos">
-            <h2>Aeroporto</h2>
-            <p>Conheça o Aeroporto Internacional do Guamá</p>
-            <a href="aeroporto"><u>Conheça o aeroporto</u></a> 
-        </section>
+        <h2>Conheça o Aeroporto</h2>
+
+        <div class="div-servicos-aeroporto">
+            <!-- Mapa do aeroporto, salas vip, estacionamento, lojas-->
+
+            <div class="div-servicos-aeroporto-cima">
+                <!--mapas e salas-->
+            </div>
+
+            <div class="div-servicos-aeroporto-baixo">
+                <!--estacionamento e lojas-->
+            </div>
+            
+        </div>
     </div>
 
     <footer>
@@ -77,4 +104,3 @@
 
 </body>
 </html>
-
