--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br">
 <head>
-    <title>login</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="/styles/login.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body>
-    <h2>Login</h2>
-    <form method="post" th:action="@{/login}">
-        <label>Usuário:</label>
-        <input type="text" name="username" required>
-        <br>
-        <label>Senha:</label>
-        <input type="password" name="password" required>
-        <br>
-        <button type="submit">Entrar</button>
-    </form>
-    <p th:if="${param.error}">Usuário ou senha inválidos!</p>
-    <p th:if="${param.logout}">Você saiu do sistema.</p>
+
+<body class="d-flex justify-content-center align-items-center vh-100 bg-light">
+    <div class="card p-4 shadow-lg" style="width: 350px;">
+        <h2 class="text-center">Faça seu login!</h2>
+        <form id="loginForm">
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Senha</label>
+                <input type="password" class="form-control" id="password" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Entrar</button>
+        </form> <br>
+        <p class="text-center"><a th:href="@{/signup}"><strong>Não possui uma conta? clique aqui para criar!</strong></a></p> 
+        <p class="text-center"><a href="#"><strong>Esqueceu a senha?</strong></a></p>
+    </div>
+
 </body>
 </html>
