--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -15,58 +15,67 @@
 </head>
 
 <body class="d-flex justify-content-center align-items-center vh-100 bg-light">
-    <div id="error-message" style="display: none; background-color: rgb(253, 115, 115);">
+<div class="container">
+    <div th:if="${erro}" class="alert alert-danger text-center" style="background-color: rgb(253, 115, 115);">
+        <p th:text="${erro}"></p>
+    </div>
+    <div id="error-message" style="display: none; background-color: rgb(253, 115, 115); margin-bottom: 10px;" >
         <p id="error-text"></p>
     </div>
+
 
     <div class="card p-4 shadow-lg" style="width: 500px;">
         <h2 class="text-center">Crie sua conta aqui!</h2>
         <form id="signupForm" th:action="@{/signup}" method="POST">
             <div class="row">
                 <div class="col-md-6 mb-3">
-                    <label for="emailS" class="form-label">Email</label>
+                    <label for="emailS" class="form-label"><strong>Email</strong></label>
                     <input type="email" class="form-control" id="emailS" name="emailS" required>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="nomeUsuario" class="form-label">Nome</label>
+                    <label for="nomeUsuario" class="form-label"><strong>Nome</strong></label>
                     <input type="text" class="form-control" id="nomeUsuario" name="nomeUsuario" required>
                 </div>
 
                 <div class="col-md-6 mb-3">
-                    <label for="telefone" class="form-label">Telefone</label>
+                    <label for="telefone" class="form-label"><strong>Telefone</strong></label>
                     <input type="text" class="form-control" id="telefone" name="telefone" placeholder="(XX) XXXXX-XXXX" required>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="cpf" class="form-label">CPF</label>
+                    <label for="cpf" class="form-label"><strong>CPF</strong></label>
                     <input type="text" class="form-control" id="cpf" name="cpf" required>
                 </div>
 
                 <div class="col-md-6 mb-3">
-                    <label for="dataDeNascimento" class="form-label">Data de Nascimento</label>
+                    <label for="dataDeNascimento" class="form-label"><strong>Data de Nascimento</strong></label>
                     <input type="date" class="form-control" id="dataDeNascimento" name="dataDeNascimento" required>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label>Sexo:</label><br>
-                    <input type="radio" id="masculino" name="sexo" value="1" required>
-                    <label for="masculino">Masculino</label><br>
+                    
+                        <label><strong>Sexo:</strong></label><br>
+                    <div class="escolha-sexo">
+                        <input type="radio" id="masculino" name="sexo" value="1" required>
+                        <label for="masculino">Masculino</label><br>
                 
-                    <input type="radio" id="feminino" name="sexo" value="2">
-                    <label for="feminino">Feminino</label><br>
+                        <input type="radio" id="feminino" name="sexo" value="2">
+                        <label for="feminino">Feminino</label><br>
                 
-                    <input type="radio" id="outro" name="sexo" value="3">
-                    <label for="outro">Outro</label><br><br>
+                        <input type="radio" id="outro" name="sexo" value="3">
+                        <label for="outro">Outro</label><br><br>
+                    </div>
+                    
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="nacionalidade" class="form-label">Nacionalidade</label>
+                    <label for="nacionalidade" class="form-label"><strong>Nacionalidade</strong></label>
                     <input type="text" class="form-control" id="nacionalidade" name="nacionalidade" required>
                 </div>
 
                 <div class="col-md-6 mb-3">
-                    <label for="passwordS" class="form-label">Senha</label>
+                    <label for="passwordS" class="form-label"><strong>Senha</strong></label>
                     <input type="password" class="form-control" id="passwordS" name="passwordS" required>
                 </div>
                 <div class="col-md-6 mb-3">
-                    <label for="confirmPasswordS" class="form-label">Confirmar Senha</label>
+                    <label for="confirmPasswordS" class="form-label"><strong>Confirmar Senha</strong></label>
                     <input type="password" class="form-control" id="confirmPasswordS" name="confirmPasswordS" required>
                 </div>
             </div>
@@ -74,6 +83,9 @@
             <button type="submit" class="btn btn-primary w-100">Criar conta</button>
         </form> <br>
     </div>
+</div>
+
+
 
 
     <script>
@@ -86,9 +98,21 @@
 
     <script>
         document.getElementById('signupForm').addEventListener('submit', function(event) {
+          // Coleta dos valores para verificação em front end
+          const email = document.getElementById('emailS').value;
+          const nomeUsuario = document.getElementById('nomeUsuario').value;
           const phone = document.getElementById('telefone').value;
           const cpf = document.getElementById('cpf').value;
-        
+          const dataDeNascimento = document.getElementById('dataDeNascimento').value;
+          const password = document.getElementById('passwordS').value;
+          const confirmPassword = document.getElementById('confirmPasswordS').value;
+
+          // Regex email
+          const regexEmail = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+          // Regex nome
+          const regexNome = /^[A-Z][a-z]{2,}\s[A-Z][a-z]{2,}$/;
+          // regex senhas
+          const regexSenha = /^(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{6,}$/;
           // Expressão regular para verificar o formato do telefone
           const phoneRegex = /^\(\d{2}\) \d{5}-\d{4}$/;
           // Expressão regular para verificar o formato do CPF
@@ -99,6 +123,23 @@
             errorMessageDiv.style.display = 'none';  // Esconde a div de erro
             document.getElementById('error-text').innerText = '';  // Limpa o texto de erro
         
+
+          if (!regexEmail.test(email)) {
+            document.getElementById('error-text').innerText = 'O email está no formato incorreto. Exemplo: exemplo@gmail.com';
+            errorMessageDiv.style.display = 'block'; // Mostra a div de erro
+            event.preventDefault(); // Impede o envio do formulário
+            return;
+          }
+
+          if(!regexNome.test(nomeUsuario)){
+            document.getElementById('error-text').innerText = 'O nome está no formato incorreto. Exemplo: Nome Sobrenome';
+            errorMessageDiv.style.display = 'block'; // Mostra a div de erro
+            event.preventDefault(); // Impede o envio do formulário
+            return;
+          }
+
+            
+
           // Verificação do telefone
           if (!phoneRegex.test(phone)) {
             document.getElementById('error-text').innerText = 'O número de telefone está no formato incorreto. Exemplo: (XX) XXXXX-XXXX';
@@ -114,13 +155,27 @@
             event.preventDefault(); // Impede o envio do formulário
             return;
           }
+
+          if(!regexSenha.test(password) || !regexSenha.test(confirmPassword)){
+                document.getElementById('error-text').innerText = 'A senha deve conter no mínimo 6 caracteres, uma letra maiúscula, um número e um caractere especial.';
+                errorMessageDiv.style.display = 'block'; // Mostra a div de erro
+                event.preventDefault(); // Impede o envio do formulário
+                return;
+        }
+
+          if(password !== confirmPassword){
+            document.getElementById('error-text').innerText = 'As senhas não coincidem.';
+            errorMessageDiv.style.display = 'block'; // Mostra a div de erro
+            event.preventDefault(); // Impede o envio do formulário
+            return;
+          }
         
           // Caso tudo esteja correto, o formulário é enviado
           alert('Formulário enviado com sucesso!');
         });
         </script>
 
-<script>
+<!-- <script>
     $(document).ready(function(){
         $("#signupForm").submit(function(event){
             event.preventDefault(); // Evita o recarregamento da página
@@ -137,7 +192,7 @@
             });
         });
     });
-</script>
+</script> -->
 
 </body>
 </html>
