--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -66,3 +66,73 @@ body {
         grid-template-columns: 1fr; /* Apenas 1 coluna no mobile */
     }
 }
+
+.container-voos {
+    text-align: center;
+    padding: 50px;
+}
+
+h1 {
+    font-size: 36px;
+    font-weight: bold;
+}
+
+h1 span {
+    color: #0056b3;
+}
+
+.voos-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.voos-card {
+    background: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 10px;
+    width: 45%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    overflow: auto;
+}
+
+.chegadas {
+    border-top: 5px solid #003366;
+}
+
+.saidas {
+    border-top: 5px solid #6699cc;
+}
+
+.h2-voo {
+    background: #003366;
+    color: white;
+    padding: 10px;
+    margin: -20px -20px 20px -20px;
+    border-radius: 10px 10px 0 0;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 10px;
+    text-align: left;
+}
+
+th {
+    background: #0056b3;
+    color: white;
+}
+
+td {
+    background: #f1f1f1;
+    color: black;
+}
+
+tr:nth-child(even) td {
+    background: #e0e0e0;
+}
