--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -294,11 +294,23 @@
         </div>
         <!-- Corpo do Modal -->
         <div class="p-4">
-            <p class="text-gray-700 dark:text-gray-300">Aqui estão suas informações.</p>
+            <p class="text-gray-900 dark:text-white">Email: <span class="text-gray-700 dark:text-gray-300" th:text="${clienteEmail}"></span></p>
+            
+
+        </div>
+        <div class="p-4 border-t border-gray-200 rounded-b dark:border-gray-600">
+            <p class="text-gray-900 dark:text-white">Telefone: <span class="text-gray-700 dark:text-gray-300" th:text="${clienteTelefone}"></span></p>
         </div>
         <!-- Rodapé do Modal -->
         <div class="flex items-center p-4 border-t border-gray-200 rounded-b dark:border-gray-600">
-            <button id="btnFechar" class="w-full text-white bg-red-500 hover:bg-red-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Fechar</button>
+            <a th:href="@{/alterar-dados}" class="w-full text-white bg-blue-700 hover:bg-blue-900 font-medium rounded-lg text-sm px-5 py-2.5 text-center block text-center">
+                Alterar Dados
+            </a>
+        </div>
+        <div class="flex items-center p-4 border-t border-gray-200 rounded-b dark:border-gray-600">
+            <form th:action="@{/}" method="post" style="width: 100%;">
+                <button type="submit" id="btnFechar" class="w-full text-white bg-red-500 hover:bg-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Logout</button>
+            </form>
         </div>
     </div>
 </div>
