alteração de dados + redefinir senha totalmente funcionais

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
             <button type="submit" class="btn btn-primary w-100">Entrar</button>
         </form> <br>
         <p class="text-center"><a th:href="@{/signup}"><strong>Não possui uma conta? clique aqui para criar!</strong></a></p> 
-        <p class="text-center"><a href="#"><strong>Esqueceu a senha?</strong></a></p>
+        <p class="text-center"><a th:href="@{/redefinir-senha}"><strong>Esqueceu a senha?</strong></a></p>
     </div>
 </div>
 
